<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_applications_msgs</name>
  <version>1.0.1</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 Applications packages
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3_applications_msgs</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications_msgs/issues</url>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
